# auto-update

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs  message_server.rs  session.rs  session_manager.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: connection.rs  main.rs  worker.rs
updater/: Cargo.toml
updater/src/: main.rs
