[workspace]
members = [
    "server",
    "shared"
]

[package]
name = "auto-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "./shared" }

actix = "0.12"
awc = "3.0.0-beta.9"
actix-codec = "0.4"

bytes = "1"
bytestring = "1"

futures = "0.3"

log = "0.4"
env_logger = "0.9"

[profile.dev.package."*"]
opt-level = "z"
debug = false
debug-assertions = false
