[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

actix = "0.12"
actix-files = "0.6.0-beta.8"
actix-web = "4.0.0-beta.10"
actix-web-actors = "4.0.0-beta.7"

log = "0.4"
env_logger = "0.9"

rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
